# llm-harness

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-26-llm-harness.md
docs/superpowers/specs/: 2026-03-26-llm-harness-design.md
llm_harness/: __init__.py  cli.py  router.py
llm_harness/providers/: __init__.py  base.py  claude_cli_provider.py  openai_provider.py
scripts/: smoke_both.sh  smoke_claude.sh  smoke_openai.sh
tests/: test_claude_cli_provider.py  test_cli.py  test_openai_provider.py  test_readme.py  test_router.py
